[workspace]
members = [
    "crates/short-hex-str",
    "crates/cell",
    "crates/diem-crypto",
    "crates/diem-crypto-derive",
    "language/borrow-graph",
    "language/bytecode-verifier",
    "language/bytecode-verifier/invalid-mutations",
    "language/bytecode-verifier/bytecode-verifier-tests",
    "language/move-core/types",
    "language/move-stdlib",
    "language/move-binary-format",
    "language/move-binary-format/serializer-tests",
    "language/move-vm/runtime",
    "language/move-vm/types",
    "language/move-vm/test-utils",
    "language/tools/move-resource-viewer",
    "mvm",
    "bcs",
    "mirai-annotations",
    "crates/nibble",
    "crates/diem-proptest-helpers",
    "crates/fallible",
    "stdlib",
    "types"
]
