[package]
name = "move-vm-runtime"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core Move execution logic"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
better_any ={path = "../../../better_any/better_any/", default-features = false}
hashbrown = "0.9"
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
cell = { path = "../../../crates/cell", version = "0.1.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
anyhow = { version = "1.0.38", default-features = false }
log = {version = "0.4", default-features = false }
tracing = {version = "0.1.26", default-features = false }
sha3 = {version = "0.9.1", default-features = false }

bytecode-verifier = { path = "../../bytecode-verifier", default-features = false }
diem-crypto = { path = "../../../crates/diem-crypto", default-features = false }
move-core-types = { path = "../../move-core/types", default-features = false }
move-vm-types = { path = "../types", default-features = false }
move-binary-format = { path = "../../move-binary-format", default-features = false }

[features]
default = ["std"]

std = [
	"cell/std",
	"anyhow/std",
	"move-binary-format/std",
	"move-core-types/std",
	"move-vm-types/std",
	"bytecode-verifier/std",
	"diem-crypto/std",
    "log/std",
]
