[package]
name = "move-bytecode-utils"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Libraries for working with sets of Move bytecode modules"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde = { version = "1.0.119", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
anyhow = { version = "1.0.38", default-features = false }
move-binary-format = { path = "../../move-binary-format" }
move-core-types = { path = "../../move-core/types" }
petgraph ={ version =  "0.6.0", default-features = false ,features = ["graphmap"]}
serde-reflection = { version =  "0.3.2", default-features = false }

# workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }
