[package]
name = "move-resource-viewer"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem genesis viewer"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bcs = { path = "../../../bcs", default-features = false }
move-core-types = { path = "../../move-core/types" }
move-vm-types = { path = "../../move-vm/types" }
move-binary-format = { path = "../../move-binary-format" }
serde = { version = "1.0.119", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
anyhow = { version = "1.0.38", default-features = false }
cell = { path = "../../../crates/cell", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
# workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }
